fix(GameCard.jsx): simple solution wrapping jsx conditional with loader card div container instead of any further refactoring, helps DOM layout

--- a/frontend/src/styles/components/card.module.css
+++ b/frontend/src/styles/components/card.module.css
@@ -76,7 +76,7 @@
 .cardss_loader_container {
   aspect-ratio: 400 / 267;
   max-width: 400px;
-  max-width: 267px;
+  max-height: 267px;
   width: 100%;
   height: auto;
   box-sizing: border-box;
